# pyechelle.vroomm

./: .gitattributes  .gitignore  .gitlab-ci.yml  CHANGELOG.md  README.md  pyproject.toml
docs/: Makefile
docs/source/: benchmark.rst  conf.py  create_example_output.py  example_direct.rst  examples.rst  index.rst  installation.rst  models.rst  new_model.rst  usage.rst
docs/source/_static/: doc_theme.css
docs/source/_static/plots/: benchmark.html  example1.html  example3.html
docs/source/_static/plots/example_results/: 00_minimal_example.html  01_multiple_fibers_and_sources.html  02_cuda.html  04_LocalDisturber.html  05_GlobalDisturber.html  06_atmospheric_dispersion.html
examples/: 00_minimal_example.py  01_multiple_fibers_and_sources.py  02_cuda.py  03_atmosphere_and_rvs.py  04_LocalDisturber.py  04_disturber.py  05_GlobalDisturber.py  06_atmospheric_dispersion.py
models/: MaroonX.hdf
pyechelle/: CCD.py  __init__.py  _kernels.py  benchmark.py  efficiency.py  hdfbuilder.py  kernel_creation.py  model_viewer.py  optics.py  randomgen.py  raytrace_cuda.py  raytracing.py  simulator.py  slit.py  sources.py  spectrograph.py  telescope.py  transformation.py
pyechelle/kernel_templates/: import_template.jinja  kernel_template.jinja  singlemode_transform.jinja  transformation_template.jinja
pyechelle/models/: available_models.txt
tests/: conftest.py  test_builder.py  test_ccd.py  test_efficiencies.py  test_misc.py  test_model_viewer.py  test_optics.py  test_randomgen.py  test_simulation.py  test_simulator.py  test_slits.py  test_sources.py  test_spectrograph.py  test_telescope.py  test_transformations.py
tests/test_data/: test_eff.csv  test_source1.csv  test_source_listlike.csv
