[tool.poetry]
name = "pyechelle"
version = "0.1.0"
description = "A fast generic spectrum simulator"
authors = ["Julian Stuermer <stuermer@lsw.uni-heidelberg.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19.2"
matplotlib = "^3.3.2"
astropy = "^4.0.1"
h5py = "^2.10.0"
scipy = "^1.5.2"
parmap = "^1.5.2"
numba = "^0.51.2"
Autologging = "^1.3.2"

[tool.poetry.dev-dependencies]
Sphinx = "^3.2.1"
hypothesis = "^5.36.1"
pytest = "^6.0.2"
coverage = {extras = ["toml"], version = "^5.3"}
pytest-cov = "^2.10.1"
sphinx-rtd-theme = "^0.5.0"

[tool.coverage.paths]
source = ["pyechelle"]

[tool.coverage.run]
branch = true
source = ["pyechelle"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
