[tool.poetry]
name = "pyechelle"
version = "0.3.6"
description = "A fast generic spectrum simulator"
authors = ["Julian Stuermer <julian@stuermer.science>"]
license = "MIT"
readme = "README.md"
homepage = "https://gitlab.com/Stuermer/pyechelle"
repository = "https://gitlab.com/Stuermer/pyechelle"
documentation = "https://stuermer.gitlab.io/pyechelle/"
include = ["models/available_models.txt"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
astropy = "^5.2"
h5py = "^3.7.0"
scipy = "^1.9.3"
parmap = "^1.6.0"
numba = "^0.56.4"
plotly = "^5.11.0"
pandas = "^1.5.2"
skycalc-ipy = "^0.1.3"
astroquery = "^0.4.6"
joblib = "^1.2.0"
matplotlib = "^3.6.2"
synphot = "^1.1.1"

[tool.poetry.group.dev.dependencies]
hypothesis = "^6.61.0"
pytest = "^7.2.0"
coverage = { extras = ["toml"], version = "^6.5.0" }
sphinx-argparse = "^0.4.0"
sphinx-rtd-theme = "^1.1.1"
pytest-benchmark = "^4.0.0"
pytest-cov = "^4.0.0"
sphinx-autodoc-annotation = "^1.0-1"
sphinx-copybutton = "^0.5.1"
Sphinx = "^5.3.0"
poetryup = "^0.12.5"
pytest-env = "^0.8.1"

[tool.pytest.ini_options]
env = [
    "NUMBA_DISABLE_JIT=4",
]

[tool.coverage.paths]
source = ["pyechelle"]

[tool.coverage.run]
branch = true
source = ["pyechelle"]

[tool.coverage.report]
show_missing = true

[tool.coverage.html]
directory = "tests/coverage"

[tool.poetry.scripts]
pyechelle = "pyechelle.simulator:main"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
