[tool.poetry]
name = "pyechelle"
version = "0.3.7"
description = "A fast generic spectrum simulator"
authors = ["Julian Stuermer <julian@stuermer.science>"]
license = "MIT"
readme = "README.md"
homepage = "https://gitlab.com/Stuermer/pyechelle"
repository = "https://gitlab.com/Stuermer/pyechelle"
documentation = "https://stuermer.gitlab.io/pyechelle/"
include = ["models/available_models.txt"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
astropy = [
    { version = "<=5.2.2", python = ">=3.8,<3.9" },
    { version = "^5.3.4", python = ">=3.9" }
]
h5py = "^3.10.0"
scipy = [
    { version = "<=1.10.1", python = ">=3.8,<3.9" },
    { version = "^1.11.3", python = ">=3.9" }
]
parmap = "^1.7.0"
plotly = "^5.17.0"
pandas = "^1.5.3"
skycalc-ipy = "^0.1.5"
astroquery = "^0.4.6"
joblib = "^1.3.2"
matplotlib = [
    { version = "<=3.7.3", python = ">=3.8,<3.9" },
    { version = "^3.8.0", python = ">=3.9" }
]
synphot = "^1.2.1"
numba = "^0.58.1"
zospy = { version = "^1.1.1", optional = true, python = ">=3.9" }

[tool.poetry.group.dev.dependencies]
hypothesis = "^6.88.1"
pytest = "^7.4.2"
coverage = { extras = ["toml"], version = "^6.5.0" }
sphinx-argparse = "^0.4.0"
sphinx-rtd-theme = "^1.3.0"
pytest-benchmark = "^4.0.0"
pytest-cov = "^4.1.0"
sphinx-autodoc-annotation = "^1.0-1"
sphinx-copybutton = "^0.5.2"
Sphinx = "^5.3.0"
pytest-env = "^0.8.2"
setuptools = "^68.2.2"
pytest-timeout = "^2.2.0"

[tool.pytest.ini_options]
timeout = "300"
env = [
    "NUMBA_DISABLE_JIT=4",
]

[tool.coverage.paths]
source = ["pyechelle"]

[tool.coverage.run]
branch = true
source = ["pyechelle"]

[tool.coverage.report]
show_missing = true

[tool.coverage.html]
directory = "tests/coverage"

[tool.poetry.scripts]
pyechelle = "pyechelle.simulator:main"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
